--- a/src/locale/messages.ja.json
+++ b/src/locale/messages.ja.json
@@ -1,31 +1,31 @@
 {
   "locale": "ja",
   "translations": {
-    "8767229999875070171": "今日のメニューは何ですか？",
-    "8143362250417871025": "当店のカフェで、焼きたてのパイをお楽しみください。",
-    "9042667883224287221": "の画像 {$INTERPOLATION}",
-    "8427344863216980288": "準備ができて {$INTERPOLATION} 分）",
-    "6867646437044332146": "ショッピングカート{$HORIZONTAL_RULE}",
-    "4857478369622199138": "アイテム #{$INTERPOLATION}",
-    "7022070615528435141": "消去",
-    "870418232806327600": "小計",
-    "5972351850683239127": "配送",
-    "8580031500056090712": "売上税",
-    "5001532695164712567": "推定合計",
-    "7398781869480847692": "割引コードまたはギフトカード",
-    "4391289919356861627": "適用する",
-    "4776389683576645610": "チェックアウト",
-    "4060654745882719311": "多くの冷蔵品を発送する",
-    "253624833718084522": "ベサニーのパイショップのロゴ",
-    "1147358182484006761": "店",
-    "8226112365442527766": "カフェ",
-    "383654359613709533": "ショッピングカート",
-    "3976940414838794655": "手作りブルーベリーパイの画像",
-    "8313823076164063832": "ベサニー・パイズのロゴマーク",
+    "8767229999875070171": "What's cooking?",
+    "8143362250417871025": "Enjoy a freshly made pie in our cafe",
+    "9042667883224287221": "image of {$INTERPOLATION}",
+    "8427344863216980288": "Ready {$INTERPOLATION} minute(s)",
+    "6867646437044332146": "Shopping Cart{$HORIZONTAL_RULE}",
+    "4857478369622199138": "ITEM #{$INTERPOLATION}",
+    "7022070615528435141": "Delete",
+    "870418232806327600": "Subtotal",
+    "5972351850683239127": "Shipping",
+    "8580031500056090712": "Sales Tax",
+    "5001532695164712567": "Estimated Total",
+    "7398781869480847692": "Discount code or gift card",
+    "4391289919356861627": "Apply",
+    "4776389683576645610": "Checkout",
+    "4060654745882719311": "Shipping many refrigerated items",
+    "253624833718084522": "Bethany's Pie Shop Logo",
+    "1147358182484006761": "Shop",
+    "8226112365442527766": "Cafe",
+    "383654359613709533": "shopping cart",
+    "3976940414838794655": "Image of homemade blueberry pie",
+    "8313823076164063832": "Logomark for Bethany's Pies",
     "113707838503363067": "あらゆる場面にぴったりのパイ",
-    "426590504202737831": "当店カフェにお越しいただくか、ご自宅までお届けいたします。",
-    "141253974316326961": "ご自宅でお楽しみください",
-    "4655268566209047039": "焼きたてです {$INTERPOLATION}",
-    "8356421868197579888": "+ カートに追加"
+    "426590504202737831": "Visit our cafe or ship to your home",
+    "141253974316326961": "Enjoy at home",
+    "4655268566209047039": "Freshly baked on {$INTERPOLATION}",
+    "8356421868197579888": "+ Add to cart"
   }
 }
