module 4 - Add Context to Elements

--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -1,31 +1,36 @@
 {
   "locale": "en-US",
   "translations": {
-    "8767229999875070171": "What's cooking?",
-    "8143362250417871025": "Enjoy a freshly made pie in our cafe",
-    "9042667883224287221": "image of {$INTERPOLATION}",
-    "8427344863216980288": "Ready {$INTERPOLATION} minute(s)",
-    "6867646437044332146": "Shopping Cart{$HORIZONTAL_RULE}",
-    "4857478369622199138": "ITEM #{$INTERPOLATION}",
-    "7022070615528435141": "Delete",
-    "870418232806327600": "Subtotal",
-    "5972351850683239127": "Shipping",
-    "8580031500056090712": "Sales Tax",
-    "5001532695164712567": "Estimated Total",
-    "7398781869480847692": "Discount code or gift card",
-    "4391289919356861627": "Apply",
-    "4776389683576645610": "Checkout",
-    "4060654745882719311": "Shipping many refrigerated items",
-    "253624833718084522": "Bethany's Pie Shop Logo",
-    "1147358182484006761": "Shop",
-    "8226112365442527766": "Cafe",
-    "383654359613709533": "shopping cart",
-    "3976940414838794655": "Image of homemade blueberry pie",
-    "8313823076164063832": "Logomark for Bethany's Pies",
-    "113707838503363067": "Pies for every occasion",
-    "426590504202737831": "Visit our cafe or ship to your home",
-    "141253974316326961": "Enjoy at home",
-    "4655268566209047039": "Freshly baked on {$INTERPOLATION}",
-    "8356421868197579888": "+ Add to cart"
+    "cafeHeading": "What's cooking?",
+    "cafeSubheading": "Enjoy a freshly made pie in our cafe",
+    "cafeImageAlt": "image of {$INTERPOLATION}",
+    "cafePieReady": " Ready {$ICU} ",
+    "2336269215177490451": "{VAR_PLURAL, plural, =0 {now} =5 {soon} other {in a while}}",
+    "cartHeading": "Shopping Cart {$HORIZONTAL_RULE}",
+    "cartAltItemImage": "image of {$INTERPOLATION}",
+    "cartItemNumber": "ITEM #{$INTERPOLATION}",
+    "cartDeleteButton": "Delete",
+    "cartSubtotalLabel": "Subtotal",
+    "cartShippingLabel": "Shipping",
+    "cartSalesTaxLabel": "Sales Tax",
+    "cartEstimatedTotalLabel": "Estimated Total",
+    "cartDiscountCodePlaceholder": "Discount code or gift card",
+    "cartApplyButton": "Apply",
+    "cartCheckoutButton": "Checkout",
+    "cartDisclaimer": " Shipping {$ICU} items",
+    "31695156214104340": "{VAR_PLURAL, plural, =1 {one} other {multiple {VAR_SELECT, select, true {refrigerated} , false {non-refreigerated}}}}",
+    "headerLogo": "Bethany's Pie Shop Logo",
+    "headerShop": "Shop",
+    "headerCafe": "Cafe",
+    "headerCart": "shopping cart",
+    "heroImageAltText": "Image of homemade blueberry pie",
+    "businessLogo": "Logomark for Bethany's Pies",
+    "siteDescription": "Pies for every occasion",
+    "shopAltDescription": "Visit our cafe or ship to your home",
+    "heroComponentText": "translate menu text for example",
+    "shopH2Message": "Enjoy at home",
+    "shopBakedOn": "Freshly baked on {$INTERPOLATION}",
+    "shopPieAltText": "image of {$INTERPOLATION}",
+    "shopAddtoCartLabel": "+ Add to cart"
   }
 }
