--- a/src/locale/messages.ja.json
+++ b/src/locale/messages.ja.json
@@ -1,31 +1,36 @@
 {
   "locale": "ja",
   "translations": {
-    "8767229999875070171": "What's cooking?",
-    "8143362250417871025": "Enjoy a freshly made pie in our cafe",
-    "9042667883224287221": "image of {$INTERPOLATION}",
-    "8427344863216980288": "Ready {$INTERPOLATION} minute(s)",
-    "6867646437044332146": "Shopping Cart{$HORIZONTAL_RULE}",
-    "4857478369622199138": "ITEM #{$INTERPOLATION}",
-    "7022070615528435141": "Delete",
-    "870418232806327600": "Subtotal",
-    "5972351850683239127": "Shipping",
-    "8580031500056090712": "Sales Tax",
-    "5001532695164712567": "Estimated Total",
-    "7398781869480847692": "Discount code or gift card",
-    "4391289919356861627": "Apply",
-    "4776389683576645610": "Checkout",
-    "4060654745882719311": "Shipping many refrigerated items",
-    "253624833718084522": "Bethany's Pie Shop Logo",
-    "1147358182484006761": "Shop",
-    "8226112365442527766": "Cafe",
-    "383654359613709533": "shopping cart",
-    "3976940414838794655": "Image of homemade blueberry pie",
-    "8313823076164063832": "Logomark for Bethany's Pies",
-    "113707838503363067": "あらゆる場面にぴったりのパイ",
-    "426590504202737831": "Visit our cafe or ship to your home",
-    "141253974316326961": "Enjoy at home",
-    "4655268566209047039": "Freshly baked on {$INTERPOLATION}",
-    "8356421868197579888": "+ Add to cart"
+    "cafeHeading": "何を料理してるの？",
+    "cafeSubheading": "カフェで焼きたてのパイをお楽しみください",
+    "cafeImageAlt": "の画像 {$INTERPOLATION}",
+    "cafePieReady": " 準備ができて {$ICU} ",
+    "2336269215177490451": "{VAR_PLURAL, plural, =0 {今} =5 {すぐ} other {iしばらくして}}",
+    "cartHeading": "ショッピングカート {$HORIZONTAL_RULE}",
+    "cartAltItemImage": "の画像 {$INTERPOLATION}",
+    "cartItemNumber": "アイテム #{$INTERPOLATION}",
+    "cartDeleteButton": "消去",
+    "cartSubtotalLabel": "小計",
+    "cartShippingLabel": "配送",
+    "cartSalesTaxLabel": "売上税",
+    "cartEstimatedTotalLabel": "推定合計",
+    "cartDiscountCodePlaceholder": "割引コードまたはギフトカード",
+    "cartApplyButton": "適用する",
+    "cartCheckoutButton": "チェックアウト",
+    "cartDisclaimer": " 配送 {$ICU} アイテム",
+    "31695156214104340": "{VAR_PLURAL, plural, =1 {1つ} other {複数 {VAR_SELECT, select, true {冷蔵} , false {非冷蔵}}}}",
+    "headerLogo": "ベサニーズ・パイ・ショップのロゴ",
+    "headerShop": "店",
+    "headerCafe": "カフェ",
+    "headerCart": "ショッピングカート",
+    "heroImageAltText": "自家製ブルーベリーパイの画像",
+    "businessLogo": "ベサニーズパイのロゴマーク",
+    "siteDescription": "あらゆる機会にぴったりのパイ",
+    "shopAltDescription": "カフェにご来店いただくか、ご自宅まで配送いたします",
+    "heroComponentText": "メニューテキストを翻訳する例",
+    "shopH2Message": "自宅で楽しむ",
+    "shopBakedOn": "焼きたて {$INTERPOLATION}",
+    "shopPieAltText": "の画像 {$INTERPOLATION}",
+    "shopAddtoCartLabel": "+ カートに追加"
   }
 }
